# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # The svn revisions that belong to the git hashes in DEPS. Used to cause full
  # rebuilds on libc++ rolls.
  clang_format_svn_revision = "302580"
  libcxx_svn_revision =       "332543"
  libcxxabi_svn_revision =    "331450"
  libunwind_svn_revision =    "332513"
}
